Add auth routes to API docs
